cluster/apps/default/table-rock-lake-level/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: table-rock-lake-level
    app.kubernetes.io/name: table-rock-lake-level
  name: table-rock-lake-level
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: table-rock-lake-level
      app.kubernetes.io/name: table-rock-lake-level
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: table-rock-lake-level
        app.kubernetes.io/name: table-rock-lake-level
    spec:
      containers:
        - env:
            - name: INFLUXDB_V2_URL
              valueFrom:
                secretKeyRef:
                  name: influxdb2-auth
                  key: url
            - name: INFLUXDB_V2_TOKEN
              valueFrom:
                secretKeyRef:
                  name: influxdb2-auth
                  key: token
            - name: INFLUXDB_V2_ORG
              valueFrom:
                secretKeyRef:
                  name: influxdb2-auth
                  key: org
          image: ghcr.io/patrickjmcd/table-rock-lake-level:v0.0.1-alpha.1
          imagePullPolicy: IfNotPresent

          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          name: table-rock-lake-level
          ports:
            - containerPort: 3000
              hostPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-registry-cred
