cluster/apps/default/table-rock-lake-level/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: table-rock-lake-level
    app.kubernetes.io/name: table-rock-lake-level
  name: table-rock-lake-level
  namespace: homeauto
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: table-rock-lake-level
    app.kubernetes.io/name: table-rock-lake-level
  type: ClusterIP
